--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.10",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.11.0",
@@ -57,6 +59,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "starknet": "^6.11.0",
     "tsc-alias": "^1.8.10",
     "typeorm": "^0.3.20",
