--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-
     "paths": {
       "@provider/*": [
         "src/providers/*"
@@ -69,6 +68,9 @@
       ],
       "@starknet/*": [
         "src/common/starknet/*"
+      ],
+      "@gateway/*": [
+        "src/gateways/*"
       ]
     }
   }
